修正上週統計

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -168,7 +168,7 @@
   </div>
 </div>
 
-<div class="row">
+<!--<div class="row">
  <div class="col-lg-6">
       <rd-widget>
         <rd-widget-header icon="fa-plus" title="教會簡介">
@@ -231,7 +231,7 @@
       </rd-widget>
   </div>
 
-</div>
+</div>-->
 
 <div class="row">
   <div class="col-xs-12">
