新增 table 的資料顯示

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -7,8 +7,19 @@
       <rd-widget-body classes="medium no-padding">
         <div class="table-responsive">
           <table class="table">
+            <thead>
+              <td>名稱</td>
+              <td>決志</td>
+              <td>受洗</td>
+              <td>聚會</td>
+            </thead>
             <tbody>
-              <tr ng-repeat="item in items"><td>{{item.mask}}</td><td>{{item.sinner}}</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
+              <tr ng-repeat="item in items">
+                <td>{{item.mask}}</td>
+                <td><i ng-if="item.sinner" class="fa fa-check"></i></td>
+                <td><i ng-if="item.baptized" class="fa fa-check"></i></td>
+                <td><i ng-if="item.meeting" class="fa fa-check"></i></td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -28,9 +39,22 @@
       </rd-widget-header>
       <rd-widget-body classes="medium no-padding">
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table">
+            <thead>
+              <td>名稱</td>
+              <td>決志</td>
+              <td>受洗</td>
+              <td>聚會</td>
+              <td>刪除時間</td>
+            </thead>
             <tbody>
-              <tr ng-repeat="item in items"><td>{{item.mask}}</td><td>{{item.sinner}}</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
+              <tr ng-repeat="item in items">
+                <td>{{item.mask}}</td>
+                <td><i ng-if="item.sinner" class="fa fa-check"></i></td>
+                <td><i ng-if="item.baptized" class="fa fa-check"></i></td>
+                <td><i ng-if="item.meeting" class="fa fa-check"></i></td>
+                <td>{{item.created_at}}</td>
+              </tr>
             </tbody>
           </table>
         </div>
