--- a/templates/info.html
+++ b/templates/info.html
@@ -28,7 +28,7 @@
           <i class="fa fa-check-circle"></i>
         </div>
         <div class="title">{{info.meeter}}</div>
-        <div class="comment">加入教會數</div>
+        <div class="comment">加入教會者總數</div>
       </rd-widget-body>
     </rd-widget>
   </div>
