更改其他資訊的顏色

--- a/templates/info.html
+++ b/templates/info.html
@@ -13,7 +13,7 @@
   <div class="col-lg-3 col-md-6 col-xs-12">
     <rd-widget>
       <rd-widget-body>
-        <div class="widget-icon red pull-left">
+        <div class="widget-icon green pull-left">
           <i class="fa fa-tint"></i>
         </div>
         <div class="title">{{info.baptized}}</div>
@@ -24,11 +24,11 @@
   <div class="col-lg-3 col-md-6 col-xs-12">
     <rd-widget>
       <rd-widget-body>
-        <div class="widget-icon orange pull-left">
+        <div class="widget-icon green pull-left">
           <i class="fa fa-check-circle"></i>
         </div>
         <div class="title">{{info.meeter}}</div>
-        <div class="comment">加入教會者總數</div>
+        <div class="comment">聚會者總數</div>
       </rd-widget-body>
     </rd-widget>
   </div>
