--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -60,7 +60,7 @@
       </rd-widget-header>
       <rd-widget-body>
         <canvas id="line" class="chart chart-line" data="data"
-        labels="labels" legend="true" series="series"
+        labels="labels" legend="true" series="series" options="options"
         click="onClick">
         </canvas>
       </rd-widget-body>
@@ -72,7 +72,7 @@
 
       </rd-widget-header>
       <rd-widget-body>
-        <canvas id="line" class="chart chart-line" data="data"
+        <canvas id="line" class="chart chart-line" data="data" options="options"
         labels="labels" legend="true" series="series"
         click="onClick">
         </canvas>
@@ -85,7 +85,7 @@
 
       </rd-widget-header>
       <rd-widget-body>
-        <canvas id="line" class="chart chart-line" data="data"
+        <canvas id="line" class="chart chart-line" data="data" options="options"
         labels="labels" legend="true" series="series"
         click="onClick">
         </canvas>
@@ -98,7 +98,7 @@
 
       </rd-widget-header>
       <rd-widget-body>
-        <canvas id="line" class="chart chart-line" data="data"
+        <canvas id="line" class="chart chart-line" data="data" options="options"
         labels="labels" legend="true" series="series"
         click="onClick">
         </canvas>
