--- a/less/screen.less
+++ b/less/screen.less
@@ -5,3 +5,9 @@
 #sidebar-wrapper > ul > li > a:hover {
   background: #536 !important;
 }
+
+canvas {
+  width: 100% !important;
+  max-width: 800px;
+  height: auto !important;
+}
