hide sidebar-footer and change breadcrumb-links font-family

--- a/less/screen.less
+++ b/less/screen.less
@@ -5,3 +5,8 @@
 #sidebar-wrapper > ul > li > a:hover {
   background: #536 !important;
 }
+
+.row.header .meta .breadcrumb-links {
+  font-family: sans-serif;
+  font-weight: bold;
+}
